# faxanadu-patcher

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: allocator.rs  consts.rs  ips.rs  main.rs  rom.rs  subroutine.rs
src/patches/: bugfixes.rs  indoor.rs  items.rs  level_skip.rs  mod.rs  music.rs  old.rs  player.rs  shops.rs  sprites.rs  text.rs
src/patches/hud/: frame_counter.rs  health.rs  health_frac.rs  level_display.rs  mana.rs  mod.rs  ointment.rs  player_stats_hook.rs  screen_id.rs
src/patches/inventory/: crystal.rs  gold.rs  items.rs  mod.rs
src/patches/music/: pause.rs
src/patches/screens/: eolis.rs  mod.rs  trunk.rs
src/patches/shops/: mod.rs  shops.rs
src/patches/sprites/: sprites.rs
src/patches/text/: dialog.rs  mod.rs  title_screen.rs
