[package]
name = "faxanadu_patcher"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"

[dependencies]
# Better argument parsing than manual env::args
clap = { version = "4.5", features = ["derive"] }

# Logging (useful for debug prints)
log = "0.4"
env_logger = "0.11"

# For unit testing with hex dumps / assertions (optional, dev only)
pretty_assertions = { version = "1.4", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"